src/builder/tests/select/snapshots/ciboulette2pg__builder__tests__select__include__include_single.snap
---
source: src/builder/tests/select/include.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_data_0" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $1 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $2,
      "public"."peoples"."age",
      $3,
      "public"."peoples"."first-name",
      $4,
      "public"."peoples"."gender",
      $5,
      "public"."peoples"."last-name",
      $6,
      "public"."peoples"."twitter"
    ) AS "data",
    "public"."peoples"."favorite_color" AS "rel_favorite_color"
  FROM
    "public"."peoples"
  WHERE
    "public"."peoples"."id" = $7
),
"cte_rel_favorite_color_data_1" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    "public"."favorite_color"."id" AS "main_id",
    "cte_peoples_data_0"."id" :: TEXT AS "related_id",
    $8 :: TEXT AS "related_type",
    $9 :: TEXT AS "type",
    JSON_BUILD_OBJECT($10, "public"."favorite_color"."color") AS "data"
  FROM
    "public"."favorite_color"
    INNER JOIN "cte_peoples_data_0" ON "cte_peoples_data_0"."rel_favorite_color" = "public"."favorite_color"."id"
) (
  SELECT
    "cte_peoples_data_0"."id",
    "cte_peoples_data_0"."type",
    "cte_peoples_data_0"."data",
    "cte_peoples_data_0"."related_type",
    "cte_peoples_data_0"."related_id"
  FROM
    "cte_peoples_data_0"
)
UNION
ALL (
  SELECT
    "cte_rel_favorite_color_data_1"."id",
    "cte_rel_favorite_color_data_1"."type",
    "cte_rel_favorite_color_data_1"."data",
    "cte_rel_favorite_color_data_1"."related_type",
    "cte_rel_favorite_color_data_1"."related_id"
  FROM
    "cte_rel_favorite_color_data_1"
);
